# pi-aftc-toolset

./: .gitignore  .npmignore  LICENSE  README.md  backup.ps1  dev_readme.md  full-check.mjs  package-lock.json  package.json  parse-check.mjs
docs/: pi_guide.md  project_guide.md  terminal_coloring.md
extensions/aftc-toolset/: allowance.readme.md  allowance.ts  cd.readme.md  cd.ts  config.readme.md  config.ts  core.readme.md  core.ts  cwd.ts  db.readme.md  db.ts  dir.ts  footer-widget.readme.md  footer-widget.ts  help.readme.md  help.ts  stfu.ts  (+26 more)
extensions/aftc-toolset/ssh/carrier/: README.md  pyproject.toml
extensions/aftc-toolset/ssh/carrier/scripts/: install.bat  install.sh
extensions/aftc-toolset/ssh/carrier/src/aftc_ssh_carrier/: __init__.py  __main__.py  daemon.py  errors.py  exec_mode.py  keys.py  monitor.py  port_forward.py  redaction.py  rpc.py  session.py  sftp_ops.py  shell_mode.py
internal-python-gui/: README.md  main.py  pyproject.toml
skills/: assess-impact.rar  audit-code.rar  define-success.rar  delegate-task.rar  develop-tdd.rar  dispatch-agents.rar  edit-document.rar  enforce-first.rar  git-workflow.rar  github.rar  guard-git.rar  hook-commits.rar  kickoff-branch.rar  plan-refactor.rar  project-generation.rar  publish-package.rar  quick-fix.rar  release-branch.rar  request-review.rar  research-first.rar  respond-review.rar  security-review.rar  sentry.rar  smoke-test.rar  update-changelog.rar  verify-work.rar  write-document.rar
tests/: README.md
themes/: aftc-black-n-blue.json  aftc-orange-viz-bak.json  aftc-orange-viz.json  cache-viz.json
(+151 files in other folders)
